--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!--부트스트랩 css 추가-->
-    <link rel="stylesheet" href="/css/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/lib/bootstrap.min.css"/>
 </head>
 <body>
-<h1>스프링부트로 시작하는 웹 서비스6</h1>
+<h1>스프링부트로 시작하는 웹 서비스</h1>
 <div class="col-md-12">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savePostsModal">글 등록</button>
     <br/>
@@ -25,14 +25,12 @@
         </tr>
         </thead>
         <tbody id="tbody">
-        {{#each posts}}
-            <tr>
-                <td>{{id}}</td>
-                <td>{{title}}</td>
-                <td>{{author}}</td>
-                <td>{{modifiedDate}}</td>
+            <tr th:each="post : ${posts}">
+                <td th:text="${post.id}"></td>
+                <td th:text="${post.title}"></td>
+                <td th:text="${post.author}"></td>
+                <td th:text="${post.modifiedDate}"></td>
             </tr>
-        {{/each}}
         </tbody>
     </table>
 </div>
@@ -51,11 +49,11 @@
                 <form>
                     <div class="form-group">
                         <label for="title">제목</label>
-                        <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
+                        <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요"/>
                     </div>
                     <div class="form-group">
                         <label for="author"> 작성자 </label>
-                        <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
+                        <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요"/>
                     </div>
                     <div class="form-group">
                         <label for="content"> 내용 </label>
