--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
-                            <a href="#">
+                            <a href="/admin/logout" th:if="${session.user}">
                                 <i class="fa fa-sign-out"></i> Log out
                             </a>
                         </li>
