템플릿 변경 및 연습시작 회원가입 1단계 완료

--- a/src/main/resources/templates/admin/fragments/footer.html
+++ b/src/main/resources/templates/admin/fragments/footer.html
@@ -16,14 +16,14 @@
 
 
     <!-- Mainly scripts -->
-    <script src="js/lib/jquery-3.1.1.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/lib/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/js/lib/jquery-3.1.1.min.js"></script>
+    <script src="/js/lib/bootstrap.min.js"></script>
+    <script src="/js/lib/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/js/lib/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="js/lib/inspinia.js"></script>
-    <script src="js/lib/plugins/pace/pace.min.js"></script>
+    <script src="/js/lib/inspinia.js"></script>
+    <script src="/js/lib/plugins/pace/pace.min.js"></script>
 </footer>
 
 </html>
