--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -8,11 +8,11 @@
 
     <title>Admin 페이지</title>
 
-    <link href="css/lib/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="/css/lib/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
-    <link href="css/lib/animate.css" rel="stylesheet" />
-    <link href="css/lib/style.css" rel="stylesheet" />
+    <link href="/css/lib/animate.css" rel="stylesheet" />
+    <link href="/css/lib/style.css" rel="stylesheet" />
 
 </head>
 
