--- a/src/main/resources/templates/admin/layout/default.html
+++ b/src/main/resources/templates/admin/layout/default.html
@@ -4,7 +4,40 @@
     <head th:replace="admin/fragments/header :: headerFragment"></head>
 
     <body>
-        <div layout:fragment="content"></div>
+        <div id="wrapper" >
+            <nav th:replace="admin/fragments/left :: leftFragment">
+
+            </nav>
+
+            <div id="page-wrapper" class="gray-bg" >
+                <div class="row border-bottom">
+                    <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
+                        <div class="navbar-header">
+                            <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+                            <form role="search" class="navbar-form-custom" method="post" action="#">
+                                <div class="form-group">
+                                    <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search"/>
+                                </div>
+                            </form>
+                        </div>
+                        <ul class="nav navbar-top-links navbar-right">
+                            <li>
+                                <a href="/admin/logout" th:if="${session.sessionedUser}">
+                                    <i class="fa fa-sign-out"></i> Log out
+                                </a>
+                            </li>
+                        </ul>
+
+                    </nav>
+                </div>
+
+
+                <div layout:fragment="content">
+                </div>
+
+                <footer th:replace="admin/fragments/footer :: footerDiv"></footer>
+            </div>
+        </div>
         <footer th:replace="admin/fragments/footer :: footerFragment"></footer>
     </body>
 
