수정기능 추가

--- a/src/main/resources/templates/practice/join.html
+++ b/src/main/resources/templates/practice/join.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
-</head>
-<body>
+{{>/practice/include/header}}
     <div>
-        <form action="/create" method="post">
+        <form action="/user/create" method="post">
             <div>
                 아이디 : <input type="text" name="userId" placeholder="아이디" />
             </div>
@@ -22,5 +16,4 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-</body>
-</html>
+{{>/practice/include/footer}}
