--- a/src/main/resources/templates/practice/list.html
+++ b/src/main/resources/templates/practice/list.html
@@ -1,34 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
-<body>
+{{>/practice/include/header}}
     <div>
-        <table border="1" width="800px">
+        <table border="1" width="100%">
             <colgroup>
-                <col width="33%"/>
-                <col width="33%"/>
-                <col width="33%"/>
+                <col width="20%"/>
+                <col width="20%"/>
+                <col width="20%"/>
+                <col width="20%"/>
+                <col width="20%"/>
             </colgroup>
             <thead>
                 <tr>
+                    <th>id</th>
                     <th>사용자 아이디</th>
                     <th>이름</th>
                     <th>이메일</th>
+                    <th>수정</th>
                 </tr>
             </thead>
             <tbody>
                 {{#users}}
                 <tr>
+                    <td>{{id}}</td>
                     <td>{{userId}}</td>
                     <td>{{name}}</td>
                     <td>{{email}}</td>
+                    <td><a href="/user/form/{{id}}">수정</a></td>
                 </tr>
                 {{/users}}
             </tbody>
         </table>
     </div>
-</body>
-</html>
+{{>/practice/include/footer}}
