--- a/src/main/resources/templates/practice/include/navigator.html
+++ b/src/main/resources/templates/practice/include/navigator.html
@@ -1,14 +1,14 @@
 <div style="width: 100%; padding: 20px 0 80px 0;">
     <div style="width: 10%; float: right;">
-        <a href="">Logout</a>
-    </div>
-
-    <div style="width: 10%; float: right;">
         <a href="">Update</a>
     </div>
 
     <div style="width: 10%; float: right;">
         <a href="/user/list">List</a>
+    </div>
+
+    <div style="width: 10%; float: right;">
+        <a href="/user/loginForm">Login</a>
     </div>
 
     <div style="width: 10%; float: right;">
