--- a/src/main/resources/templates/practice/include/navigator.html
+++ b/src/main/resources/templates/practice/include/navigator.html
@@ -1,12 +1,16 @@
 <div style="width: 100%; padding: 20px 0 80px 0;">
+
+    {{#user}}
     <div style="width: 10%; float: right;">
-        <a href="">Update</a>
+        <a href="/user/logout">Logout</a>
     </div>
 
     <div style="width: 10%; float: right;">
         <a href="/user/list">List</a>
     </div>
+    {{/user}}
 
+    {{^user}}
     <div style="width: 10%; float: right;">
         <a href="/user/loginForm">Login</a>
     </div>
@@ -14,4 +18,5 @@
     <div style="width: 10%; float: right;">
         <a href="/user/join">Join</a>
     </div>
+    {{/user}}
 </div>
