--- a/src/main/resources/templates/practice/include/navigator.html
+++ b/src/main/resources/templates/practice/include/navigator.html
@@ -1,22 +1,26 @@
 <div style="width: 100%; padding: 20px 0 80px 0;">
 
-    {{#user}}
-    <div style="width: 10%; float: right;">
+    {{#sessionedUser}}
+    <div style="width: 15%; float: right;">
         <a href="/user/logout">Logout</a>
+    </div>
+
+    <div style="width: 15%; float: right;">
+        <a href="/user/form/{{id}}">개인정보 수정</a>
     </div>
 
     <div style="width: 10%; float: right;">
         <a href="/user/list">List</a>
     </div>
-    {{/user}}
+    {{/sessionedUser}}
 
-    {{^user}}
+    {{^sessionedUser}}
     <div style="width: 10%; float: right;">
         <a href="/user/loginForm">Login</a>
     </div>
 
-    <div style="width: 10%; float: right;">
+    <div style="width: 15%; float: right;">
         <a href="/user/join">Join</a>
     </div>
-    {{/user}}
+    {{/sessionedUser}}
 </div>
