ETO 회원가입 추가

--- a/src/main/resources/templates/practice/include/navigator.html
+++ b/src/main/resources/templates/practice/include/navigator.html
@@ -12,6 +12,14 @@
     <div style="width: 10%; float: right;">
         <a href="/user/list">List</a>
     </div>
+
+    <div style="width: 10%; float: right;">
+        <a href="/questions/list">글 목록</a>
+    </div>
+
+    <div style="width: 10%; float: right;">
+        <a href="/questions/form">글쓰기</a>
+    </div>
     {{/sessionedUser}}
 
     {{^sessionedUser}}
