--- a/src/main/resources/templates/ETOAdmin/login.html
+++ b/src/main/resources/templates/ETOAdmin/login.html
@@ -23,14 +23,12 @@
             <h1 class="logo-name">IN+</h1>
 
         </div>
-        <h3>Welcome to IN+</h3>
-        <p>Perfectly designed and precisely prepared admin theme with over 50 pages with extra new web app views.
-            <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
-        </p>
-        <p>Login in. To see it in action.</p>
-        <form id="login_form" class="m-t" role="form" method="post" action="/admin/login">
+        <h3>Welcome to EasyTakeOut</h3>
+        <p>쉽게 메뉴를 등록하자!</p>
+        <p>가입문의 : </p>
+        <form id="login_form" class="m-t" role="form" method="post" action="/eayAdmin/login">
             <div class="form-group">
-                <input type="email" id="email" name="email" class="form-control" placeholder="User Email" required=""/>
+                <input type="text" id="email" name="email" class="form-control" placeholder="User Email" required=""/>
             </div>
             <div class="form-group">
                 <input type="password" id="password" name="password" class="form-control" placeholder="Password" required=""/>
@@ -39,7 +37,7 @@
 
             <a href="#"><small>Forgot password?</small></a>
             <p class="text-muted text-center"><small>Do not have an account?</small></p>
-            <a class="btn btn-sm btn-white btn-block" href="/admin/createAccount">Create an account</a>
+            <a class="btn btn-sm btn-white btn-block" href="/easyAdmin/createAccount">Create an account</a>
         </form>
         <p class="m-t"> <small>Inspinia we app framework base on Bootstrap 3 &copy; 2014</small> </p>
     </div>
