--- a/src/main/resources/templates/ETOAdmin/createAccount.html
+++ b/src/main/resources/templates/ETOAdmin/createAccount.html
@@ -29,6 +29,7 @@
         <h3>Register to IN+</h3>
         <p>Create account to see it in action.</p>
         <form class="m-t" role="form" action="/easyAdmin/createAccount" method="post">
+            <input type="hidden" name="_csrf" value="{{#_csrf}}token{{/_csrf}}" />
             <div class="form-group">
                 <input type="text" name="email" class="form-control" placeholder="Email" />
             </div>
