--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,4 +1,4 @@
-{{>/ETOAdmin/layout/header}}
+<!--{{>/ETOAdmin/layout/header}}-->
 
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
