--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,4 +1,5 @@
- 
+{{>/src/main/resources/templates/ETOAdmin/layout/header}}
+
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
             <div class="col-lg-12">
@@ -14,4 +15,5 @@
         </div>
     </div>
 
-{{>/ETOAdmin/layout/footer}}
+{{>/src/main/resources/templates/ETOAdmin/layout/footer}}
+<!--{{>/ETOAdmin/layout/footer}}-->
