--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,4 +1,4 @@
-{{>/src/main/resources/templates/ETOAdmin/layout/header}}
+{{>/ETOAdmin/layout/header}}
 
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
@@ -15,5 +15,4 @@
         </div>
     </div>
 
-{{>/src/main/resources/templates/ETOAdmin/layout/footer}}
-<!--{{>/ETOAdmin/layout/footer}}-->
+{{>/ETOAdmin/layout/footer}}
