--- a/src/main/resources/templates/ETOAdmin/layout/header.html
+++ b/src/main/resources/templates/ETOAdmin/layout/header.html
@@ -32,7 +32,7 @@
                             </div>
                         </li>
                         <li class="active">
-                            <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Main view</span></a>
+                            <a href="../index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Main view</span></a>
                         </li>
                         <li>
                             <a href="minor.html"><i class="fa fa-th-large"></i> <span class="nav-label">Minor view</span> </a>
