--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,4 +1,4 @@
-{{>/ETOAdmin/layout/header}}
+{{>/src/main/resources/templates/ETOAdmin/layout/header}}
 
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
@@ -15,4 +15,4 @@
         </div>
     </div>
 
-{{>/ETOAdmin/layout/footer}}
+{{>/src/main/resources/templates/ETOAdmin/layout/footer}}
