--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,11 +1,11 @@
-{{>/src/main/resources/templates/ETOAdmin/layout/header}}
+{{>/ETOAdmin/layout/header}}
 
     <div class="wrapper wrapper-content animated fadeInRight">
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center m-t-lg">
                     <h1>
-                        Welcome in INSPINIA Static SeedProject3
+                        Welcome in INSPINIA Static SeedProject
                     </h1>
                     <small>
                         It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment for these projects.
@@ -15,4 +15,4 @@
         </div>
     </div>
 
-{{>/src/main/resources/templates/ETOAdmin/layout/footer}}
+{{>/ETOAdmin/layout/footer}}
