--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,18 +1,27 @@
-{{> /ETOAdmin/layout/header}}
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="ETOAdmin/layout/default">
 
-    <div class="wrapper wrapper-content animated fadeInRight">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="text-center m-t-lg">
-                    <h1>
-                        Welcome in INSPINIA Static SeedProject test
-                    </h1>
-                    <small>
-                        It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment for these projects.
-                    </small>
-                </div>
+<div class="wrapper wrapper-content animated fadeInRight" layout:fragment="content">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center m-t-lg">
+
+
+                <h1 th:inline="text">
+                    <!--[[${menu}]]-->
+                </h1>
+                <h1>
+                    Welcome in INSPINIA Static SeedProject
+                </h1>
+                <small>
+                    It is an application skeleton for a typical web app. You can use it to quickly bootstrap your webapp projects and dev environment for these projects.
+                </small>
             </div>
         </div>
     </div>
+</div>
 
-{{>/ETOAdmin/layout/footer}}
+
+</html>
