--- a/src/main/resources/templates/ETOAdmin/index.html
+++ b/src/main/resources/templates/ETOAdmin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="ETOAdmin/layout/default">
+      layout:decorator="/ETOAdmin/layout/default">
 
 <div class="wrapper wrapper-content animated fadeInRight" layout:fragment="content">
     <div class="row">
