--- a/src/main/resources/templates/ETOAdmin/fragments/footer.html
+++ b/src/main/resources/templates/ETOAdmin/fragments/footer.html
@@ -26,6 +26,8 @@
     <script src="/js/lib/plugins/pace/pace.min.js"></script>
 
     <script src="/js/app/common.js"></script>
+
+    <css layout:fragment="add_js"/>
 </footer>
 
 </html>
