--- a/src/main/resources/templates/ETOAdmin/fragments/header.html
+++ b/src/main/resources/templates/ETOAdmin/fragments/header.html
@@ -14,6 +14,8 @@
     <link href="/css/lib/animate.css" rel="stylesheet" />
     <link href="/css/lib/style.css" rel="stylesheet" />
 
+    <css layout:fragment="add_css"/>
+
 </head>
 
 </html>
