--- a/src/main/resources/templates/ETOAdmin/fragments/left.html
+++ b/src/main/resources/templates/ETOAdmin/fragments/left.html
@@ -19,10 +19,14 @@
                 </div>
             </li>
 
-            <li th:classappend="${menu} == 'createMenu' ? 'active' : ''">
-                <a href="/easyAdmin/createMenu"><i class="fa fa-th-large"></i> <span class="nav-label">Create Menu</span></a>
+            <li th:classappend="${parent_menu} == 'menu' ? 'active' : ''">
+                <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Menu</span></a>
+                <ul class="nav nav-second-level collapse in">
+                    <li th:classappend="${child_menu} == 'create' ? 'active' : ''"><a href="/easyAdmin/createMenu">Create</a></li>
+                    <li th:classappend="${child_menu} == 'list' ? 'active' : ''"><a href="/easyAdmin/listMenu">List</a></li>
+                </ul>
             </li>
-            <li th:classappend="${menu} == 'question' ? 'active' : ''">
+            <li th:classappend="${parent_menu} == 'question' ? 'active' : ''">
                 <a href="/admin/question"><i class="fa fa-th-large"></i> <span class="nav-label">Question</span> </a>
             </li>
         </ul>
