--- a/src/main/resources/templates/ETOAdmin/listMenu.html
+++ b/src/main/resources/templates/ETOAdmin/listMenu.html
@@ -13,46 +13,45 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>매뉴 등록 <small>입력해주세요.</small></h5>
+                    <h5>Hover Table  </h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li><a href="#">Config option 1</a>
+                            </li>
+                            <li><a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" action="/easyAdmin/createMenu" enctype="multipart/form-data">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                        <div class="form-group"><label class="col-sm-2 control-label">상품명</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="title"/>
-                            </div>
-                        </div>
 
-                        <div class="form-group"><label class="col-sm-2 control-label">가격</label>
-                            <div class="col-sm-10">
-                                <input type="number" class="form-control" name="price"/>
-                            </div>
-                        </div>
-
-                        <div class="form-group"><label class="col-sm-2 control-label">가격</label>
-                            <div class="col-sm-10">
-                                <div class="input-field col s6">
-                                    <input multiple="multiple" type="file" id="file" name="file"/>
-                                    <img id="foo" src="#" style="width: 150px; height: 150px;"/>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group"><label class="col-sm-2 control-label">설명</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" name="description"/>
-                            </div>
-                        </div>
-
-                        <div class="hr-line-dashed"></div>
-                        <div class="form-group">
-                            <div class="col-sm-4 col-sm-offset-2">
-                                <button class="btn btn-white">Cancel</button>
-                                <button class="btn btn-primary" id="btn-save">Save</button>
-                            </div>
-                        </div>
-                    </form>
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Title</th>
+                            <th>Image</th>
+                            <th>Description</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="menus,index : ${eto_menus}">
+                                <td th:text="${index.index}+1"></td>
+                                <td th:text="${menus.title}"></td>
+                                <td><img th:src="|${menus.uploadPath}${menus.fileName}|"/> </td>
+                                <td th:text="${menus.description}"></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
