--- a/src/main/resources/templates/ETOAdmin/createMenu.html
+++ b/src/main/resources/templates/ETOAdmin/createMenu.html
@@ -4,8 +4,7 @@
       layout:decorator="/ETOAdmin/layout/default">
 
 <css layout:fragment="add_css">
-    <link href="/css/plugins/dropzone/basic.css" rel="stylesheet" />
-    <link href="/css/plugins/dropzone/dropzone.css" rel="stylesheet" />
+    <link href="/css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet" />
 </css>
 
 <div class="wrapper wrapper-content animated fadeInRight" layout:fragment="content">
@@ -30,7 +29,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group"><label class="col-sm-2 control-label">가격</label>
+                        <div class="form-group"><label class="col-sm-2 control-label">사진</label>
                             <div class="col-sm-10">
                                 <div class="input-field col s6">
                                     <input multiple="multiple" type="file" id="file" name="file"/>
@@ -61,7 +60,7 @@
 </div>
 
 <js layout:fragment="add_js">
-    <script src="/js/lib/plugins/dropzone/dropzone.js"></script>
+    <script src="/js/lib/plugins/jasny/jasny-bootstrap.min.js"></script>
     <!--custom js 추가-->
     <script src="/js/app/create_menu.js"></script>
 </js>
