--- a/src/main/resources/templates/ETOAdmin/detailMenu.html
+++ b/src/main/resources/templates/ETOAdmin/detailMenu.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="/ETOAdmin/layout/default">
+
+<css layout:fragment="add_css">
+    <link href="/css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet" />
+</css>
+
+<div class="wrapper wrapper-content animated fadeInRight" layout:fragment="content">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>매뉴 등록 <small>입력해주세요.</small></h5>
+                </div>
+                <div class="ibox-content">
+                    <form method="post" class="form-horizontal" th:action="|/easyAdmin/detail/${eto_menu.id}|" enctype="multipart/form-data">
+                        <input type="hidden" name="_method" value="put"/>
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <div class="form-group"><label class="col-sm-2 control-label">상품명</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="title" th:value="${eto_menu.title}"/>
+                            </div>
+                        </div>
+
+                        <div class="form-group"><label class="col-sm-2 control-label">가격</label>
+                            <div class="col-sm-10">
+                                <input type="number" class="form-control" name="price" th:value="${eto_menu.price}"/>
+                            </div>
+                        </div>
+
+                        <div class="form-group"><label class="col-sm-2 control-label">사진</label>
+                            <div class="col-sm-10">
+                                <div class="input-field col s6">
+                                    <div class="fileinput" th:classappend="${eto_menu.fileName}  ? 'fileinput-exists' : 'fileinput-new'" data-provides="fileinput">
+                                        <span class="btn btn-default btn-file"><span class="fileinput-new">Select file</span>
+                                        <span class="fileinput-exists">Change</span>
+                                            <input type="file" id="file" name="file"/>
+                                        </span>
+                                        <span class="fileinput-filename" th:text="${eto_menu.fileName}"></span>
+                                        <a href="#" class="close fileinput-exists" data-dismiss="fileinput" style="float: none">×</a>
+                                    </div>
+                                    <!--<input multiple="multiple" type="file" id="file" name="file"/>-->
+                                    <div>
+                                        <img id="foo" th:src="|${eto_menu.uploadPath}${eto_menu.fileName}|" style="width: 150px; height: 150px;"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group"><label class="col-sm-2 control-label">설명</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="description" th:value="${eto_menu.description}"/>
+                            </div>
+                        </div>
+
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
+                            <div class="col-sm-4 col-sm-offset-2">
+                                <button class="btn btn-white">Cancel</button>
+                                <button class="btn btn-primary" id="btn-save">Save</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<js layout:fragment="add_js">
+    <script src="/js/lib/plugins/jasny/jasny-bootstrap.min.js"></script>
+    <!--custom js 추가-->
+    <script src="/js/app/create_menu.js"></script>
+</js>
+
 </html>
