--- a/src/main/resources/templates/ETOAdmin/listMenu.html
+++ b/src/main/resources/templates/ETOAdmin/listMenu.html
@@ -13,29 +13,18 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>Hover Table  </h5>
-                    <div class="ibox-tools">
-                        <a class="collapse-link">
-                            <i class="fa fa-chevron-up"></i>
-                        </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-wrench"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#">Config option 1</a>
-                            </li>
-                            <li><a href="#">Config option 2</a>
-                            </li>
-                        </ul>
-                        <a class="close-link">
-                            <i class="fa fa-times"></i>
-                        </a>
-                    </div>
+                    <h5>Menu List</h5>
                 </div>
                 <div class="ibox-content">
 
                     <table class="table table-hover">
                         <thead>
+                        <colgroup>
+                            <col width="2%" />
+                            <col width="20%" />
+                            <col width="20%" />
+                            <col width="*" />
+                        </colgroup>
                         <tr>
                             <th>#</th>
                             <th>Title</th>
@@ -46,8 +35,8 @@
                         <tbody>
                             <tr th:each="menus,index : ${eto_menus}">
                                 <td th:text="${index.index}+1"></td>
-                                <td th:text="${menus.title}"></td>
-                                <td><img th:src="|${menus.uploadPath}${menus.fileName}|"/> </td>
+                                <td><a th:href="|/easyAdmin/detail/${menus.id}|" th:text="${menus.title}"></a></td>
+                                <td><img th:src="|${menus.uploadPath}${menus.fileName}|" style="width: 150px; height: 150px;"/> </td>
                                 <td th:text="${menus.description}"></td>
                             </tr>
                         </tbody>
