--- a/src/main/resources/templates/ETOAdmin/fragments/left.html
+++ b/src/main/resources/templates/ETOAdmin/fragments/left.html
@@ -26,8 +26,8 @@
                     <li th:classappend="${child_menu} == 'list' ? 'active' : ''"><a href="/easyAdmin/listMenu">List</a></li>
                 </ul>
             </li>
-            <li th:classappend="${parent_menu} == 'question' ? 'active' : ''">
-                <a href="/admin/question"><i class="fa fa-th-large"></i> <span class="nav-label">Question</span> </a>
+            <li th:classappend="${parent_menu} == 'chat' ? 'active' : ''">
+                <a href="/easyAdmin/chat"><i class="fa fa-th-large"></i> <span class="nav-label">Chat</span> </a>
             </li>
         </ul>
 
