--- a/src/main/resources/templates/ETOAdmin/detailMenu.html
+++ b/src/main/resources/templates/ETOAdmin/detailMenu.html
@@ -7,6 +7,7 @@
     <link href="/css/plugins/jasny/jasny-bootstrap.min.css" rel="stylesheet" />
 </css>
 
+
 <div class="wrapper wrapper-content animated fadeInRight" layout:fragment="content">
     <div class="row">
         <div class="col-lg-12">
@@ -18,6 +19,7 @@
                     <form method="post" class="form-horizontal" th:action="|/easyAdmin/detail/${eto_menu.id}|" enctype="multipart/form-data">
                         <input type="hidden" name="_method" value="put"/>
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                        <input type="hidden" id="eto_id" th:value="${eto_menu.id}"/>
                         <div class="form-group"><label class="col-sm-2 control-label">상품명</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" name="title" th:value="${eto_menu.title}"/>
@@ -58,8 +60,11 @@
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button class="btn btn-white">Cancel</button>
+                                <button class="btn btn-white" id="btn-cancel">Cancel</button>
                                 <button class="btn btn-primary" id="btn-save">Save</button>
+                            </div>
+                            <div class="col-sm-4 col-sm-offset-2">
+                                <button class="btn btn-warning" id="btn-delete" style="float: right">Delete</button>
                             </div>
                         </div>
                     </form>
@@ -67,9 +72,7 @@
             </div>
         </div>
     </div>
-
 </div>
-
 <js layout:fragment="add_js">
     <script src="/js/lib/plugins/jasny/jasny-bootstrap.min.js"></script>
     <!--custom js 추가-->
